# sql-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
src/: __init__.py  config.py
src/agent/: llm.py  prompts.py  sql_agent.py
src/database/: connection.py  seed.py
src/ui/: app.py
src/utils/: sql_validator.py
tests/: test_config.py  test_database.py  test_sql_validator.py
